# jdobb-async-queue

./: .gitignore  README.md  SETUP.md  pyproject.toml
docs/: README.md  SESSION_CONTEXT_PROMPT.md
docs/api/: API_REFERENCE.md
docs/architecture/: ARCHITECTURE_OVERVIEW.md
docs/architecture/decisions/: ADR-001-atomic-job-claiming.md  ADR-002-priority-weighted-queuing.md  ADR-003-pubsub-broadcasting.md  ADR_TEMPLATE.md  README.md
docs/architecture/decisions/foundational/: ADR-F001-python-async-first.md  ADR-F002-pydantic-schemas.md  ADR-F003-backend-abstraction.md  ADR-F004-redis-primary-backend.md  ADR-F005-structlog-logging.md  README.md
docs/guides/: DEVELOPMENT_SETUP.md  QUICK_START.md
docs/implementation/: IMPLEMENTATION_CHECKLIST.md
docs/reviews/: 2026-02-13-exhaustive-code-review.json  2026-02-13-exhaustive-code-review.md
src/jdobb_async_queue/: __init__.py  broadcaster.py  job_queue.py  schemas.py  worker.py
src/jdobb_async_queue/backends/: __init__.py  base.py  memory.py  redis.py  sqlite.py
tests/: conftest.py  test_broadcaster.py  test_job_queue.py  test_schemas.py  test_worker.py
tests/integration/: test_full_flow.py
tests/test_backends/: test_memory.py  test_redis.py  test_sqlite.py
